--- a/index.html
+++ b/index.html
@@ -19,25 +19,39 @@
       body {
         -webkit-tap-highlight-color: transparent;
         background-color: #f8fafc;
-        /* Prevent pull-to-refresh on mobile to feel more like an app */
         overscroll-behavior-y: none;
       }
       .safe-bottom {
         padding-bottom: env(safe-area-inset-bottom);
       }
     </style>
-  <script type="importmap">
+    <!-- Use esm.sh for reliable public access on GitHub Pages -->
+    <script type="importmap">
 {
   "imports": {
-    "react-dom/client": "https://aistudiocdn.com/react-dom@^19.2.1/client",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^1.31.0",
+    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client",
+    "react-dom": "https://esm.sh/react-dom@18.2.0",
+    "react": "https://esm.sh/react@18.2.0",
+    "lucide-react": "https://esm.sh/lucide-react@0.292.0",
+    "@google/genai": "https://esm.sh/@google/genai@0.1.1",
     "react/": "https://aistudiocdn.com/react@^19.2.1/",
-    "react": "https://aistudiocdn.com/react@^19.2.1",
-    "lucide-react": "https://aistudiocdn.com/lucide-react@^0.555.0"
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/"
   }
 }
 </script>
+    <!-- Simple Error Handler to show blank page cause -->
+    <script>
+      window.onerror = function(msg, url, line, col, error) {
+        var root = document.getElementById('root');
+        if (root && root.innerHTML === '') {
+           var div = document.createElement('div');
+           div.style.padding = '20px';
+           div.style.color = 'red';
+           div.innerHTML = '<h3>App Loading Error</h3><pre>' + msg + '</pre>';
+           document.body.appendChild(div);
+        }
+      };
+    </script>
 </head>
   <body>
     <div id="root"></div>
