Update title in index.html for clarity

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>A1 機捷時刻表 | 台北車站發車資訊</title>
+    <title>機捷時刻表 | 台北車站發車資訊</title>
     
     <!-- PWA Settings -->
     <meta id="theme-color-meta" name="theme-color" content="#E0E7FF">
