--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@
                         </div>
                         <div className="flex-1 mx-4 pb-2 relative flex items-center justify-center">
                             <div className={`h-[2px] w-full rounded-full ${isExp ? 'bg-white/30' : 'bg-slate-200 dark:bg-slate-700'}`}></div>
-                            <div className="absolute top-1/2 -translate-y-1/2 flex flex-col items-center">
+                            <div className="absolute top-1/2 left-1/2 -translate-x-1/2 -mt-1 flex flex-col items-center">
                                 <div className={`w-2 h-2 rounded-full mb-1 ${isExp ? 'bg-white' : 'bg-slate-400 dark:bg-slate-500'}`}></div>
-                                <span className={`text-xs font-mono font-bold ${isExp ? 'text-white' : 'text-slate-500 dark:text-slate-400'}`}>{train.arrivalA8}</span>
+                                <span className={`text-lg font-mono font-bold tracking-tighter leading-none ${isExp ? 'text-white' : 'text-slate-500 dark:text-slate-400'}`}>{train.arrivalA8}</span>
                             </div>
                         </div>
                         <div className="text-right">
